--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "js-yaml": "^3.10.0",
-    "remark-frontmatter": "^1.1.0"
+    "remark": "^13.0.0",
+    "remark-frontmatter": "^3.0.0",
+    "remark-metadata": "./"
   },
   "devDependencies": {
     "changelog-verify": "^1.1.0",
